HPC-8867: Make sure that link labels wrap in footnotes, improve responsiveness of header area

--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-logo.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-logo.scss
@@ -10,7 +10,7 @@
 
   .cd-site-logo {
     // width: 186px;
-    width: 360px;
+    width: 100%;
     height: auto;
     margin: 0 0 0 -1.5rem;
     padding-left: 0.5rem;
